--- a/css/agency.css
+++ b/css/agency.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    background:#133986;
+    background:#669264;
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -118,7 +118,7 @@
     right: 1px;
     width: 70px; /* Adjust the width to make it smaller */
     height: 40px; /* Adjust the height to make it smaller */
-    background-color: #105CD6;
+    background-color: #669264;
     border: none; /* Remove default border */
     border-radius: 15px; /* Makes the button circular */
     padding: 0px; /* Space inside the button */
