--- a/cssGallery/font-awesome.css
+++ b/cssGallery/font-awesome.css
@@ -229,7 +229,7 @@
   content: "\f00c";
 }
 .fa-times:before {
-  content: "\f00d";
+  content: none;
 }
 .fa-search-plus:before {
   content: "\f00e";
