updating the contact

--- a/css/app.css
+++ b/css/app.css
@@ -2560,7 +2560,7 @@ Pagination
 }
 
 .contact-form-box {
-    background-color: var(--color-white);
+    background-color:#a6cfa5;
     padding: 50px;
     border-radius: 30px;
 }
