--- a/css/app.css
+++ b/css/app.css
@@ -2560,7 +2560,7 @@ Pagination
 }
 
 .contact-form-box {
-    background-color:#a6cfa5;
+    background-color:#D0E8C5;
     padding: 50px;
     border-radius: 30px;
 }
